More adjustments to API.
