# service/nodejs/cyd-service/api/swagger/swagger.yaml
@@ -199,25 +199,19 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  '/stories/{key}/{version}/chapters':
+  '/chapters/{storyKey}':
     x-swagger-router-controller: chapters
     post:
-      description: Creates a chapter with given information.
+      description: Creates a draft chapter with given information.
       tags:
         - story
       operationId: createChapter
       parameters:
-        - name: key
+        - name: storyKey
           in: path
           description: story key
           required: true
           type: string
-        - name: version
-          in: path
-          description: version of story to get
-          required: true
-          type: integer
-          format: int32
         - name: chapter
           in: body
           description: Chapter information
@@ -233,25 +227,19 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  '/stories/{key}/{version}/chapters/{id}':
+  '/chapters/{storyKey}/draft/{id}':
     x-swagger-router-controller: chapters
     get:
-      description: Gets a chapter.
+      description: Gets a draft chapter.
       tags:
         - story
-      operationId: getChapter
+      operationId: getDraftChapter
       parameters:
-        - name: key
+        - name: storyKey
           in: path
           description: story key
           required: true
           type: string
-        - name: version
-          in: path
-          description: version of story to get
-          required: true
-          type: integer
-          format: int32
         - name: id
           in: path
           description: chapter ID
@@ -268,22 +256,16 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     put:
-      description: Updates a chapter.
+      description: Updates a draft chapter.
       tags:
         - story
       operationId: updateChapter
       parameters:
-        - name: key
+        - name: storyKey
           in: path
           description: story key
           required: true
           type: string
-        - name: version
-          in: path
-          description: version of story to get
-          required: true
-          type: integer
-          format: int32
         - name: id
           in: path
           description: chapter ID
@@ -305,15 +287,49 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  '/stories/{key}/{version}/chapters/{id}/signpost':
+  '/chapters/{storyKey}/draft/{id}/signpost':
     x-swagger-router-controller: chapters
-    get:
-      description: Retrieves just the signpost portion of the chapter
+    put:
+      description: Updates signpost of draft chapter, adding, changing and removing as specified.
       tags:
         - story
-      operationId: getSignpost
+      operationId: updateSignpost
       parameters:
-        - name: key
+        - name: storyKey
+          in: path
+          description: story key
+          required: true
+          type: string
+        - name: id
+          in: path
+          description: chapter ID
+          required: true
+          type: integer
+          format: int32
+        - name: signs
+          in: body
+          description: signs to update or add
+          required: true
+          schema:
+            $ref: '#/definitions/SignpostUpdate'
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  '/chapters/{storyKey}/{version}/{id}':
+    x-swagger-router-controller: chapters
+    get:
+      description: Retrieves chapter for specified story version.
+      tags:
+        - story
+      operationId: getChapterByVersion
+      parameters:
+        - name: storyKey
           in: path
           description: story key
           required: true
@@ -335,44 +351,6 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/Signpost"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    put:
-      description: Updates signs on signpost, adding, changing and removing as specified.
-      tags:
-        - story
-      operationId: updateSignpost
-      parameters:
-        - name: key
-          in: path
-          description: story key
-          required: true
-          type: string
-        - name: version
-          in: path
-          description: version of story to get
-          required: true
-          type: integer
-          format: int32
-        - name: id
-          in: path
-          description: chapter ID
-          required: true
-          type: integer
-          format: int32
-        - name: signs
-          in: body
-          description: signs to update or add
-          required: true
-          schema:
-            $ref: '#/definitions/SignpostUpdate'
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
         default:
           description: Error
           schema:
